troca de imagens
No primeiro commit eu precisei renomear todas as imagens. agora coloquei novamente cada imagem no seu lugar com seus novos nomes

--- a/arquivos do projeto/barbearypage.html
+++ b/arquivos do projeto/barbearypage.html
@@ -59,14 +59,14 @@
 
         <div class="imgshorarios">
             <div class="inImgs">
-                <img src="img/photo-1599351431202-1e0f0137899a.jpeg" alt="imagem de um barbeiro">
+                <img src="img/img10.jpeg" alt="imagem de um barbeiro">
                 <div class="sombraHorarios">
 
                 </div>
             </div>
 
             <div class="inImgs">
-                <img src="img/istockphoto-1352346836-1024x1024-transformed.jpeg" alt="imagem de um barbeiro">
+                <img src="img/img11.jpeg" alt="imagem de um barbeiro">
                 <div class="sombraHorarios">
 
                 </div>
@@ -103,28 +103,28 @@
             <ul>
                 <li>
                     <div>
-                        <img src="img/barbeiro-fazendo-a-barba-de-um-homem-em-uma-barbearia_1212-2694.avif"
+                        <img src="img/img6.avif"
                             alt="Imagens de um barbeiro fazendo uma barba">
                         <span>Barba</span>
                     </div>
                 </li>
                 <li>
                     <div>
-                        <img src="img/cliente-fazendo-o-corte-de-cabelo-em-um-salao-de-barbearia_1303-20824.avif"
+                        <img src="img/img8.avif"
                             alt="Imagem de um barbeiro cortando cabelo">
                         <span>Corte</span>
                     </div>
                 </li>
                 <li>
                     <div>
-                        <img src="img/cabeleireiro-lavando-o-cabelo-de-um-cliente-em-uma-barbearia_1303-20680.avif"
+                        <img src="img/img5.avif"
                             alt="Imagem de um barbeiro lavando um cabelo">
                         <span>Lavagem</span>
                     </div>
                 </li>
                 <li>
                     <div>
-                        <img src="img/11729912-barbeiro-preparando-o-rosto-do-homem-para-fazer-a-barba-com-toalha-quente-na-barbearia-foto.jpeg"
+                        <img src="img/img2.jpeg"
                             alt="Imagem de um barbeiro hidratando uma barba">
                         <span>Hidratação</span>
                     </div>
