concluindo a responsividade do site

--- a/index.html
+++ b/index.html
@@ -181,6 +181,7 @@
             <a href=""><ion-icon name="logo-facebook"></ion-icon>Facebook</a>
             <a href=""><ion-icon name="call-outline"></ion-icon>Telefone</a>
         </div>
+        <p>&copy; Script Ninjas 2024</p>
     </footer>
 </body>
 <script src="barbearydoc.js"></script>
