--- a/index.html
+++ b/index.html
@@ -173,6 +173,9 @@
         <div id="mapa" class="mpstyle">
 
         </div>
+        <div class="gps">
+            <a target="_blank" href="<a target="_blank" href="https://www.google.com/maps/dir/?api=1&destination=latitude,longitude"></a><button>Abrir no Maps<ion-icon name="navigate-outline"></ion-icon></button></a>
+        </div>
     </section>
 
     <footer>
