--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <script async
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBj1dogxCkeaXgTX4hBdcsHy4WrYYiVL9c&callback=initMap">
     </script>
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+    <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBj1dogxCkeaXgTX4hBdcsHy4WrYYiVL9c&callback=initMap&callback=initMap"></script>
 </head>
 
 <body>
