--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-    <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBj1dogxCkeaXgTX4hBdcsHy4WrYYiVL9c&callback=initMap&callback=initMap"></script>
+    <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBj1dogxCkeaXgTX4hBdcsHy4WrYYiVL9c&callback=initMap"></script>
 </head>
 
 <body>
