--- a/index.html
+++ b/index.html
@@ -7,14 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Barbeary Page</title>
     <link rel="stylesheet" href="barber.css">
+
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-    <script async
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBj1dogxCkeaXgTX4hBdcsHy4WrYYiVL9c&callback=initMap">
-    </script>
-    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-    <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBj1dogxCkeaXgTX4hBdcsHy4WrYYiVL9c&callback=initMap"></script>
+    
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBj1dogxCkeaXgTX4hBdcsHy4WrYYiVL9c&callback=initMap"></script>
 </head>
 
 <body>
@@ -177,7 +174,9 @@
 
         </div>
         <div class="gps">
-            <a target="_blank" href="<a target="_blank" href="https://www.google.com/maps/dir/?api=1&destination=latitude,longitude"></a><button>Abrir no Maps<ion-icon name="navigate-outline"></ion-icon></button></a>
+            <a target="_blank" href="https://www.google.com/maps/dir/?api=1&destination=-2.51386,-44.30448">
+                <button>Abrir no Maps<ion-icon name="navigate-outline"></ion-icon></button>
+            </a>
         </div>
     </section>
 
