--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-    
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBNnn44MjKQwK7X1VyKiZa8cT-b_bOMX-U"></script>
+
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBj1dogxCkeaXgTX4hBdcsHy4WrYYiVL9c&callback=initMap"></script>
 </head>
 
