--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBNnn44MjKQwK7X1VyKiZa8cT-b_bOMX-U"></script>
 
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBj1dogxCkeaXgTX4hBdcsHy4WrYYiVL9c&callback=initMap"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBNnn44MjKQwK7X1VyKiZa8cT-b_bOMX-U&callback=initMap"defer></script>
+
 </head>
 
 <body>
@@ -171,7 +171,7 @@
 
     <section class="mp" id="mp">
         <h2>Nossa Localização</h2>
-        <div id="mapa" class="mpstyle">
+        <div id="map" class="mpstyle">
 
         </div>
         <div class="gps">
