inserindo os links

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <ion-icon name="star"></ion-icon>
             </div>
             <div class="agendHorario">
-                <button><a href="">Agende seu Horário (Clique aqui)</a></button>
+                <button><a href="https://api.whatsapp.com/send?phone=+5598996091421&text=Ol%C3%A1%2C+gostaria+de+agendar+um+hor%C3%A1rio.">Agende seu Horário (Clique aqui)</a></button>
             </div>
         </div>
     </header>
@@ -183,9 +183,9 @@
 
     <footer>
         <div class="redesSociais">
-            <a target="_blank" href=""><ion-icon name="logo-instagram"></ion-icon>Instagram</a>
-            <a href=""><ion-icon name="logo-facebook"></ion-icon>Facebook</a>
-            <a href=""><ion-icon name="call-outline"></ion-icon>Telefone</a>
+            <a target="_blank" href="https://www.instagram.com/barbeariasrguimaraes/?hl=pt-br"><ion-icon name="logo-instagram"></ion-icon>Instagram</a>
+            <a href="https://www.facebook.com/p/Sr-Guimar%C3%A3es-100063649196377/?locale=hi_IN&paipv=0&eav=AfaGdx3kTi4gXif3ccRBBg9yDJNA09NghAcS9skLBj_b0ROEYsenvRTtyQRUGlgd4ZM&_rdr"><ion-icon name="logo-facebook"></ion-icon>Facebook</a>
+            <a href=""><ion-icon name="call-outline"></ion-icon>98 988666746</a>
         </div>
         <p>&copy; Script Ninjas 2024</p>
         
