--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
         <div class="redesSociais">
             <a target="_blank" href="https://www.instagram.com/barbeariasrguimaraes/?hl=pt-br"><ion-icon name="logo-instagram"></ion-icon>Instagram</a>
             <a href="https://www.facebook.com/p/Sr-Guimar%C3%A3es-100063649196377/?locale=hi_IN&paipv=0&eav=AfaGdx3kTi4gXif3ccRBBg9yDJNA09NghAcS9skLBj_b0ROEYsenvRTtyQRUGlgd4ZM&_rdr"><ion-icon name="logo-facebook"></ion-icon>Facebook</a>
-            <a href=""><ion-icon name="call-outline"></ion-icon>98 988666746</a>
+            <a href=""><ion-icon name="call-outline"></ion-icon>98 9 88666746</a>
         </div>
         <p>&copy; Script Ninjas 2024 </p>
         
